force-app/main/default/objects/SPASpecailApprovalProducts__c/SPASpecailApprovalProducts__c.object-meta.xml
<CustomObject>
    <description>This is for historical approvals when the Bid desk approval needs to be escalated by Product managers, BU team, and/or VP of Product Management</description>
    <label>SpaSpeicalApprovalProduct</label>
    <nameField>
        <label>SPA Product Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SpaSpecailApprovalProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>