force-app/main/default/objects/SPASpecailApprovalProducts__c/fields/Competitive_Info__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Info__c</fullName>
    <label>Competitive Info</label>
    <length>70000</length>
    <type>LongTextArea</type>
</CustomField>