force-app/main/default/objects/SPASpecailApprovalProducts__c/fields/Modified_Landed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Modified_Landed_Cost__c</fullName>
    <label>Modified Landed Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>