force-app/main/default/objects/SPASpecailApprovalProducts__c/fields/PM_Approved_Price__c.field-meta.xml
<CustomField>
    <fullName>PM_Approved_Price__c</fullName>
    <label>PM Approved Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>