force-app/main/default/objects/SPASpecailApprovalProducts__c/fields/Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>SPA_Product_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>