force-app/main/default/objects/SPASpecailApprovalProducts__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>SPA_Product_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>