force-app/main/default/objects/SPASpecailApprovalProducts__c/fields/SpaSpecialApproval__c.field-meta.xml
<CustomField>
    <fullName>SpaSpecialApproval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SpaSpecialApproval</label>
    <referenceTo>SpaSpecialApproval__c</referenceTo>
    <relationshipName>SPASpeicalApprovalProducts</relationshipName>
    <type>Lookup</type>
</CustomField>