force-app/main/default/objects/SPASpecailApprovalProducts__c/fields/Special_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Notes__c</fullName>
    <label>Special Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>